# ShortForge

./: .env.example  .gitignore  AGENTS.md  PROJECT_PLAN.md  README.md
backend/: ARCHITECTURE.md  README.md  importlog.txt  importlog2.txt  pyproject.toml  test_gemini.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/db/: base.py  session.py
backend/app/dependencies/: ai.py  generated_image.py  generation.py  image.py  project.py  script.py  speech.py  video.py  workflow.py
backend/app/dp/: session.py
backend/app/middleware/: cors.py  request_id.py
backend/app/prompts/: script_prompt.py
backend/app/providers/: base.py  factory.py  gemini.py
backend/app/repositories/: generated_audio_repository.py  generated_image_repository.py  generated_video_repository.py  project_repository.py
backend/app/schemas/: __init__.py  ai.py  gemini.py  generated_audio.py  generated_image.py  generated_video.py  generation.py  image.py  project.py  script.py
backend/app/services/: ai_service.py  generated_image_service.py  image_service.py  image_storage.py  project_service.py  script_service.py  speech_service.py  speech_storage.py  video_service.py  video_storage.py
backend/app/workflows/: generation_workflow.py
backend/migrations/: env.py
backend/migrations/versions/: 3af03c953cac_add_generated_images_table.py  46d91755ca76_create_projects_table.py  500ec2a5d7e5_add_generated_videos_table.py  (+3 more)
backend/providers/: base.py  gemini.py
backend/tests/: test_health.py  test_infra.py
(+43 files in other folders)
