[project]
name = "shortforge-backend"
version = "0.1.0"
description = "ShortForge - AI-Powered YouTube Shorts Generator (Backend)"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    "sqlalchemy>=2.0.35",
    "alembic>=1.13.2",
    "psycopg[binary]>=3.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]